flux/infra/kube-prometheus-stack/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: cilium-ingress-gateway
      sectionName: http-k8s-home-arpa
  hostnames:
    - grafana.k8s.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
